package patterns.structural.flyweight;

public class Yuzbasi extends Asker {

    public Yuzbasi() {
        super(EnumMermiBoyutu.BES);
    }
}
